show calendar and events in scheduling

--- a/src/app/repository/add-short/add-short.component.html
+++ b/src/app/repository/add-short/add-short.component.html
@@ -1,7 +1,7 @@
 
 <p-blockUI [blocked]="creating"></p-blockUI>
 <form [formGroup]="addForm">
-  <p-card title="Add repository">
+  <p-card header="Add repository">
     <br/>
     <div class="ui-inputgroup">
       <div class="p-grid">
