--- a/src/app/task/task-scheduling/task-scheduling.component.html
+++ b/src/app/task/task-scheduling/task-scheduling.component.html
@@ -2,3 +2,7 @@
 </app-page-title>
 
 <p-fullCalendar [events]="events" [options]="options"></p-fullCalendar>
+<br/>
+<br/>
+<br/>
+<app-month-view [events]="calEvents" [date]="now"></app-month-view>
