--- a/src/app/calendar/week-view/week-view.component.html
+++ b/src/app/calendar/week-view/week-view.component.html
@@ -1,3 +1,8 @@
-<p>
-  week-view works!
-</p>
+<div class="WeekDayContainer" *ngFor="let weekDayNr of [0,1,2,3,4,5,6]">
+  <div class="WeekDayTitle">
+    {{date.weekday(weekDayNr).format('ddd')}}
+  </div>
+  <div class="SingleWeekDay" *ngFor="let day of forDayOfWeek(weekDayNr); index as i; ">
+    {{day.date.format("D")}}
+  </div>
+</div>
