--- a/src/app/calendar/week-view/week-view.component.html
+++ b/src/app/calendar/week-view/week-view.component.html
@@ -1,8 +1,41 @@
-<div class="WeekDayContainer" *ngFor="let weekDayNr of [0,1,2,3,4,5,6]">
-  <div class="WeekDayTitle">
-    {{date.weekday(weekDayNr).format('ddd')}}
+<div class="ks-grid">
+  <div class="ks-col">
+    <h3>{{title}}</h3>
   </div>
-  <div class="SingleWeekDay" *ngFor="let day of forDayOfWeek(weekDayNr); index as i; ">
-    {{day.date.format("D")}}
+  <div class="ks-col ks-col-grow">
+
+  </div>
+  <div class="ks-col-no-right-pad">
+    <p-calendar [ngModel]="_dateAsDate" (ngModelChange)="newDate.emit(asMoment($event))" showButtonBar="true"></p-calendar>
+  </div>
+</div>
+<div class="MonthView">
+  <div class="Header">
+    <div *ngFor="let weekDayNr of [0,1,2,3,4,5,6]">
+      <div class="WeekDayContainer" [ngStyle]="{left: 100 / 7 * weekDayNr + '%', width: 100/7+'%'}">
+        <div class="WeekDayCell">
+          {{date.weekday(weekDayNr).format('ddd')}}
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="EventBody" [ngStyle]="{height: height+'px'}">
+    <div
+      pDroppable="events"
+      [ngClass]="{'WeekDay': true, 'Weekend': week[weekDayNr].date.day() === 0 || week[weekDayNr].date.day() ===6}"
+      [ngStyle]="{left: 100/7*weekDayNr+'%', width: 100/7+'%', borderLeftWidth: weekDayNr === 0 ? '1px': '0'}"
+      *ngFor="let weekDayNr of [0,1,2,3,4,5,6]">
+      <a [routerLink]="[]" (click)="daySelected.emit(week[weekDayNr].date)" class="WeekDayLabel">
+        {{week[weekDayNr].date.format('D')}}
+      </a>
+      <a [routerLink]="[]" (click)="weekSelected.emit(week[weekDayNr].date)" *ngIf="weekDayNr===0" class="WeekNrLabel">
+        {{week[weekDayNr].date.format('w')}}
+      </a>
+    </div>
+    <div *ngFor="let event of eventsInWeek[weekDayNr]">
+      <div pDraggable="events" class="Event" [ngStyle]="{top: (27+event.row*21)+'px', left: (100/7* event.offset) +'%', width: (100/7*event.length)+'%'}">
+        {{event.event.title}}
+      </div>
+    </div>
   </div>
 </div>
